# documate

./: .env.example  .gitignore  app.py  pyproject.toml
configs/: file_filters.json
dev_prompts/: idea.txt  implementation_plan.txt
src/documate/: analytics_agent.py  azure_auth.py  embeddings_factory.py  global_qa_agent.py  llm_factory.py  qa_agent.py  repo_manager.py
src/documate/callbacks/: streamlit_callback.py
src/documate/doc_agent/: agent.py  prompts.py
src/documate/wiki_agent/: architect.py  orchestrator.py  page_writer.py  prompts.py
